made the employee side more user friendly
made the employee side more user friendly